litellm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - litellm.lowjungxuan.dpdns.org
      secretName: litellm-tls
  rules:
    - host: litellm.lowjungxuan.dpdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: litellm
                port:
                  number: 4000
